--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,6 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-
 a:hover {
   color: #535bf2;
 }
@@ -47,11 +46,9 @@ h1 {
   will-change: filter;
   transition: filter 300ms;
 }
-
 .logo:hover {
   filter: drop-shadow(0 0 2em rgba(100, 108, 255, 0.6666666667));
 }
-
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em rgba(247, 223, 30, 0.6666666667));
 }
@@ -75,13 +72,10 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-
 button:hover {
   border-color: #646cff;
 }
-
-button:focus,
-button:focus-visible {
+button:focus, button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
